--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 ---
 title: Home Page
+color: blue
 ---
 
 
 
 <h1> {{ site.title }} </h1>
+
 <h2> {{ page.title }} </h2>
+
+<p>My favorite color is {{ page.color }}. My email address is {{ site.email }}. A about little me: {{ site.description }}.</p>
