--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@ color: blue
 
 <h2> {{ page.title }} </h2>
 
-<p>My favorite color is {{ page.color }}. My email address is {{ site.email }}. A about little me: {{ site.description }}.</p>
+<p>My favorite color is {{page.color}}. My email address is {{site.email}}. A little about me: {{site.description}}.</p>
