--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 ---
 title: Home Page
 color: blue
+layout: default
 ---
 
-{% include header.html %}
-
 <h1> {{ site.title }} </h1>
-
 <h2> {{ page.title }} </h2>
-
 <p>My favorite color is {{page.color}}. My email address is {{site.email}}. A little about me: {{site.description}}.</p>
-
-{% include footer.html %}
