--- a/index.html
+++ b/index.html
@@ -5,3 +5,12 @@ layout: default
 ---
 
 <p>My favorite color is {{page.color}}. My email address is {{site.email}}. A little about me: {{site.description}}.</p>
+
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+      <!--<img src="{{ post.image }}" alt="">-->
+    </li>
+  {% endfor %}
+</ul>
