--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 title: Home Page
 color: blue
-layout: default
+layout: front-page
 ---
 
 <p>My favorite color is {{page.color}}. My email address is {{site.email}}. A little about me: {{site.description}}.</p>
